update Spring-AI notebooks: refine execution metadata, align haiku content, improve text-to-audio examples, and update model configurations

--- a/notebooks/spring-ai/SpringAI_Overview.ipynb
+++ b/notebooks/spring-ai/SpringAI_Overview.ipynb
@@ -16,15 +16,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:51:46.453940Z",
-     "start_time": "2025-05-11T18:51:45.261870Z"
+     "end_time": "2025-12-01T15:29:43.911579Z",
+     "start_time": "2025-12-01T15:29:42.968234Z"
     }
    },
    "cell_type": "code",
    "source": [
     "%useLatestDescriptors\n",
-    "%use spring-ai-openai\n",
-    "USE { dependencies { implementation(\"com.fasterxml.jackson.module:jackson-module-kotlin:2.18.2\") } }"
+    "%use spring-ai-openai"
    ],
    "outputs": [],
    "execution_count": 1
@@ -37,8 +36,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:51:46.513875Z",
-     "start_time": "2025-05-11T18:51:46.461778Z"
+     "end_time": "2025-12-01T15:29:43.981004Z",
+     "start_time": "2025-12-01T15:29:43.912419Z"
     }
    },
    "cell_type": "code",
@@ -54,8 +53,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:51:46.774329Z",
-     "start_time": "2025-05-11T18:51:46.518004Z"
+     "end_time": "2025-12-01T15:29:44.299716Z",
+     "start_time": "2025-12-01T15:29:43.981859Z"
     }
    },
    "cell_type": "code",
@@ -82,8 +81,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:51:47.820009Z",
-     "start_time": "2025-05-11T18:51:46.791193Z"
+     "end_time": "2025-12-01T15:29:45.912851Z",
+     "start_time": "2025-12-01T15:29:44.300267Z"
     }
    },
    "cell_type": "code",
@@ -92,9 +91,9 @@
     {
      "data": {
       "text/plain": [
-       "In code's embrace,  \n",
-       "Kotlin whispers, smooth and clear—  \n",
-       "Nature meets the tech."
+       "Code flows like water,  \n",
+       "Kotlin's elegance unfolds—  \n",
+       "Breezy, smooth, and clear.  "
       ]
      },
      "execution_count": 4,
@@ -112,8 +111,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:51:47.874900Z",
-     "start_time": "2025-05-11T18:51:47.823943Z"
+     "end_time": "2025-12-01T15:29:45.983195Z",
+     "start_time": "2025-12-01T15:29:45.922192Z"
     }
    },
    "cell_type": "code",
@@ -137,8 +136,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:51:51.046247Z",
-     "start_time": "2025-05-11T18:51:47.878935Z"
+     "end_time": "2025-12-01T15:29:51.043586Z",
+     "start_time": "2025-12-01T15:29:45.983909Z"
     }
    },
    "cell_type": "code",
@@ -153,13 +152,11 @@
     {
      "data": {
       "text/plain": [
-       "Ah, dear traveler, the road ahead is ever uncertain, much like the paths through the Shire or the shadowed trails of Mirkwood. What awaits you may be shaped by the choices you make, for in Middle-earth, destiny often intertwines with the will of the Free Peoples.\n",
+       "In the winding paths of fate, much like the journey of Frodo and Sam, what awaits you is often shrouded in uncertainty, veiled like the shadow of Mordor. Yet, take heed: within the unknown lies opportunity and growth. \n",
        "\n",
-       "Take heed of the wisdom of Gandalf, who reminds us that \"All we have to decide is what to do with the time that is given us.\" Embrace courage in the face of adversity, for even the smallest person can change the course of the future, as Frodo Baggins so bravely did.\n",
+       "Consider the wisdom of Elrond, who spoke of choices and the weight they carry. Your actions, like Bilbo's decision to leave the Shire, can lead to adventures unforeseen. Embrace the journey ahead with the courage of Aragorn and the heart of Samwise; for even in darkness, there is always a glimmer of hope.\n",
        "\n",
-       "Seek fellowship in your journey, for the bonds of friendship and loyalty are as vital as the strongest steel. And remember, even in the darkest of times, the light of hope can shine through, much like the Evenstar guiding those lost in shadow.\n",
-       "\n",
-       "Prepare thyself, for every adventure holds both peril and wonder. Trust in your heart, and let the tales of old inspire you as you forge your own path."
+       "Remember, the road goes ever on and on, and it is not the destination that defines you, but the steps you take along the way. Seek the light, and you shall find your path."
       ]
      },
      "execution_count": 6,
@@ -191,16 +188,16 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:51:51.135360Z",
-     "start_time": "2025-05-11T18:51:51.053181Z"
+     "end_time": "2025-12-01T15:29:51.765272Z",
+     "start_time": "2025-12-01T15:29:51.044617Z"
     }
    },
    "cell_type": "code",
    "source": [
     "%useLatestDescriptors\n",
     "%use coroutines\n",
-    "@file:DependsOn(\"org.jetbrains.kotlinx:kotlinx-coroutines-reactive:1.10.1\")\n",
-    "@file:DependsOn(\"org.jetbrains.kotlinx:kotlinx-coroutines-reactor:1.10.1\")"
+    "@file:DependsOn(\"org.jetbrains.kotlinx:kotlinx-coroutines-reactive:1.10.2\")\n",
+    "@file:DependsOn(\"org.jetbrains.kotlinx:kotlinx-coroutines-reactor:1.10.2\")"
    ],
    "outputs": [],
    "execution_count": 7
@@ -213,8 +210,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:51:52.236596Z",
-     "start_time": "2025-05-11T18:51:51.138698Z"
+     "end_time": "2025-12-01T15:29:52.894533Z",
+     "start_time": "2025-12-01T15:29:51.766330Z"
     }
    },
    "cell_type": "code",
@@ -236,9 +233,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In code's gentle flow,  \n",
-      "Kotlin whispers, clean and bright—  \n",
-      "Breezes of pure joy."
+      "Kotlin whispers soft,  \n",
+      "Code flows like a gentle stream,  \n",
+      "Nature meets the code.  "
      ]
     }
    ],
@@ -263,17 +260,20 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:51:52.300410Z",
-     "start_time": "2025-05-11T18:51:52.240029Z"
+     "end_time": "2025-12-01T15:29:52.979698Z",
+     "start_time": "2025-12-01T15:29:52.906266Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "data class Movie(\n",
-    "    val title: String,\n",
-    "    val year: Int,\n",
-    "    val director: String,\n",
-    "    val genre: String\n",
+    "import com.fasterxml.jackson.annotation.JsonCreator\n",
+    "import com.fasterxml.jackson.annotation.JsonProperty\n",
+    "\n",
+    "data class Movie @JsonCreator constructor(\n",
+    "    @JsonProperty(\"title\") val title: String,\n",
+    "    @JsonProperty(\"year\") val year: Int,\n",
+    "    @JsonProperty(\"director\") val director: String,\n",
+    "    @JsonProperty(\"genre\") val genre: String\n",
     ")"
    ],
    "outputs": [],
@@ -287,8 +287,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:51:52.337347Z",
-     "start_time": "2025-05-11T18:51:52.302905Z"
+     "end_time": "2025-12-01T15:29:53.025656Z",
+     "start_time": "2025-12-01T15:29:52.980486Z"
     }
    },
    "cell_type": "code",
@@ -310,8 +310,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:51:53.419457Z",
-     "start_time": "2025-05-11T18:51:52.342096Z"
+     "end_time": "2025-12-01T15:29:54.364822Z",
+     "start_time": "2025-12-01T15:29:53.026498Z"
     }
    },
    "cell_type": "code",
@@ -326,7 +326,7 @@
     {
      "data": {
       "text/plain": [
-       "Movie(title=Driving Miss Daisy, year=1989, director=Driving Miss Daisy, genre=Drama)"
+       "Movie(title=Dances with Wolves, year=1990, director=Kevin Costner, genre=Western)"
       ]
      },
      "execution_count": 11,
@@ -358,8 +358,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:51:54.397916Z",
-     "start_time": "2025-05-11T18:51:53.425168Z"
+     "end_time": "2025-12-01T15:29:55.348033Z",
+     "start_time": "2025-12-01T15:29:54.366601Z"
     }
    },
    "cell_type": "code",
@@ -386,8 +386,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:51:54.475702Z",
-     "start_time": "2025-05-11T18:51:54.402514Z"
+     "end_time": "2025-12-01T15:29:55.465591Z",
+     "start_time": "2025-12-01T15:29:55.368520Z"
     }
    },
    "cell_type": "code",
@@ -410,8 +410,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:52:11.082672Z",
-     "start_time": "2025-05-11T18:52:11.044812Z"
+     "end_time": "2025-12-01T15:29:55.521936Z",
+     "start_time": "2025-12-01T15:29:55.466431Z"
     }
    },
    "cell_type": "code",
@@ -442,7 +442,7 @@
     ")"
    ],
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -452,8 +452,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:53:21.055393Z",
-     "start_time": "2025-05-11T18:53:21.007170Z"
+     "end_time": "2025-12-01T15:29:55.577463Z",
+     "start_time": "2025-12-01T15:29:55.522655Z"
     }
    },
    "cell_type": "code",
@@ -472,7 +472,7 @@
     ")"
    ],
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -482,8 +482,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:53:23.993702Z",
-     "start_time": "2025-05-11T18:53:22.992199Z"
+     "end_time": "2025-12-01T15:29:56.429315Z",
+     "start_time": "2025-12-01T15:29:55.578255Z"
     }
    },
    "cell_type": "code",
@@ -496,15 +496,15 @@
     {
      "data": {
       "text/plain": [
-       "ChatCompletionMessage[rawContent=null, role=ASSISTANT, name=null, toolCallId=null, toolCalls=[ToolCall[index=null, id=call_j7bF9U678spoE9ZFgLydbS7Y, type=function, function=ChatCompletionFunction[name=getCurrentWeather, arguments={\"location\":\"Paris, France\"}]]], refusal=null, audioOutput=null]"
+       "ChatCompletionMessage[rawContent=null, role=ASSISTANT, name=null, toolCallId=null, toolCalls=[ToolCall[index=null, id=call_ThwxemPYeaDhrNSgApiYWa0Q, type=function, function=ChatCompletionFunction[name=getCurrentWeather, arguments={\"location\":\"Paris, France\"}]]], refusal=null, audioOutput=null, annotations=[], reasoningContent=null]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 18
+   "execution_count": 16
   },
   {
    "metadata": {},
@@ -523,8 +523,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:53:26.592539Z",
-     "start_time": "2025-05-11T18:53:26.518174Z"
+     "end_time": "2025-12-01T15:29:56.528538Z",
+     "start_time": "2025-12-01T15:29:56.442588Z"
     }
    },
    "cell_type": "code",
@@ -538,14 +538,14 @@
     "            messageWithToolInvocation = ChatCompletionMessage(\n",
     "                if (temperature != null) \"$temperature C\" else \"Unable to get the weather\",\n",
     "                ChatCompletionMessage.Role.TOOL,\n",
-    "                functionName, toolCall.id(), null, null, null\n",
+    "                functionName, toolCall.id(), null, null, null, null, null\n",
     "            )\n",
     "        }\n",
     "    }\n",
     "}"
    ],
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 17
   },
   {
    "metadata": {},
@@ -555,8 +555,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:53:29.327398Z",
-     "start_time": "2025-05-11T18:53:28.690337Z"
+     "end_time": "2025-12-01T15:29:57.646007Z",
+     "start_time": "2025-12-01T15:29:56.529274Z"
     }
    },
    "cell_type": "code",
@@ -570,15 +570,15 @@
     {
      "data": {
       "text/plain": [
-       "The current temperature in Paris, France is 15°C."
+       "I'm unable to provide real-time weather updates. You might want to check a reliable weather website or app for the current weather in Paris."
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 20
+   "execution_count": 18
   },
   {
    "metadata": {},
