--- a/notebooks/spring-ai/tutorials/1. Intro.ipynb
+++ b/notebooks/spring-ai/tutorials/1. Intro.ipynb
@@ -32,8 +32,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:20:23.962206Z",
-     "start_time": "2025-05-11T18:20:22.945188Z"
+     "end_time": "2025-12-01T13:54:29.569264Z",
+     "start_time": "2025-12-01T13:54:28.861181Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_3_jupyter",
+      "Line_4_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -78,8 +84,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:20:27.159256Z",
-     "start_time": "2025-05-11T18:20:27.097816Z"
+     "end_time": "2025-12-01T13:54:29.649698Z",
+     "start_time": "2025-12-01T13:54:29.571727Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_5_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -101,8 +112,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:20:31.997792Z",
-     "start_time": "2025-05-11T18:20:31.830652Z"
+     "end_time": "2025-12-01T13:54:29.973968Z",
+     "start_time": "2025-12-01T13:54:29.651203Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_6_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -121,8 +137,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:20:40.695755Z",
-     "start_time": "2025-05-11T18:20:38.591611Z"
+     "end_time": "2025-12-01T13:54:33.043024Z",
+     "start_time": "2025-12-01T13:54:29.975696Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_7_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -135,7 +156,7 @@
     "\n",
     "anthropicApi.chatCompletionEntity(\n",
     "    AnthropicApi.ChatCompletionRequest(\n",
-    "        AnthropicApi.ChatModel.CLAUDE_3_5_SONNET.value,\n",
+    "        AnthropicApi.ChatModel.CLAUDE_SONNET_4_0.value,\n",
     "        listOf(anthropicMessage), null, 100, 0.8, false\n",
     "    )\n",
     ")\n",
@@ -147,10 +168,9 @@
     {
      "data": {
       "text/plain": [
-       "<200 OK OK,ChatCompletionResponse[id=msg_01GdysrRajqyi32z5T8T6jvA, type=message, role=ASSISTANT, content=[ContentBlock[type=TEXT, source=null, text=Here's a classic one:\n",
+       "<200 OK OK,ChatCompletionResponse[id=msg_01PByqU55f2W72YbZ5WgcZLA, type=message, role=ASSISTANT, content=[ContentBlock[type=TEXT, source=null, text=Why don't scientists trust atoms?\n",
        "\n",
-       "Why don't scientists trust atoms?\n",
-       "Because they make up everything! 😄, index=null, id=null, name=null, input=null, toolUseId=null, content=null, signature=null, thinking=null, data=null]], model=claude-3-5-sonnet-20241022, stopReason=end_turn, stopSequence=null, usage=Usage[inputTokens=11, outputTokens=27]],[:status:\"200\", anthropic-organization-id:\"ea22ac71-22a7-43cc-9c6a-0a6a2c25768f\", anthropic-ratelimit-input-tokens-limit:\"200000\", anthropic-ratelimit-input-tokens-remaining:\"200000\", anthropic-ratelimit-input-tokens-reset:\"2025-05-11T18:20:40Z\", anthropic-ratelimit-output-tokens-limit:\"50000\", anthropic-ratelimit-output-tokens-remaining:\"50000\", anthropic-ratelimit-output-tokens-reset:\"2025-05-11T18:20:40Z\", anthropic-ratelimit-requests-limit:\"500\", anthropic-ratelimit-requests-remaining:\"499\", anthropic-ratelimit-requests-reset:\"2025-05-11T18:20:39Z\", anthropic-ratelimit-tokens-limit:\"250000\", anthropic-ratelimit-tokens-remaining:\"250000\", anthropic-ratelimit-tokens-reset:\"2025-05-11T18:20:40Z\", cf-cache-status:\"DYNAMIC\", cf-ray:\"93e3b1067beee521-TXL\", content-length:\"398\", content-type:\"application/json\", date:\"Sun, 11 May 2025 18:20:40 GMT\", request-id:\"req_011CP2CtyLNnZYZHkPv8YteM\", server:\"cloudflare\", strict-transport-security:\"max-age=31536000; includeSubDomains; preload\", via:\"1.1 google\", x-robots-tag:\"none\"]>"
+       "Because they make up everything!, index=null, id=null, name=null, input=null, toolUseId=null, content=null, signature=null, thinking=null, data=null, cacheControl=null, title=null, context=null, citations=null]], model=claude-sonnet-4-20250514, stopReason=end_turn, stopSequence=null, usage=Usage[inputTokens=11, outputTokens=17, cacheCreationInputTokens=0, cacheReadInputTokens=0]],[:status:\"200\", anthropic-organization-id:\"ea22ac71-22a7-43cc-9c6a-0a6a2c25768f\", anthropic-ratelimit-input-tokens-limit:\"16500000\", anthropic-ratelimit-input-tokens-remaining:\"16500000\", anthropic-ratelimit-input-tokens-reset:\"2025-12-01T13:54:31Z\", anthropic-ratelimit-output-tokens-limit:\"4250000\", anthropic-ratelimit-output-tokens-remaining:\"4250000\", anthropic-ratelimit-output-tokens-reset:\"2025-12-01T13:54:32Z\", anthropic-ratelimit-tokens-limit:\"20750000\", anthropic-ratelimit-tokens-remaining:\"20750000\", anthropic-ratelimit-tokens-reset:\"2025-12-01T13:54:31Z\", cf-cache-status:\"DYNAMIC\", cf-ray:\"9a7313aafac74f3e-TXL\", content-length:\"473\", content-type:\"application/json\", date:\"Mon, 01 Dec 2025 13:54:33 GMT\", request-id:\"req_011CVg5cfE9hAHNeSPPc3xUi\", retry-after:\"29\", server:\"cloudflare\", strict-transport-security:\"max-age=31536000; includeSubDomains; preload\", x-envoy-upstream-service-time:\"2647\", x-robots-tag:\"none\"]>"
       ]
      },
      "execution_count": 4,
@@ -176,14 +196,19 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:20:45.234463Z",
-     "start_time": "2025-05-11T18:20:45.197442Z"
+     "end_time": "2025-12-01T13:54:33.080994Z",
+     "start_time": "2025-12-01T13:54:33.043942Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_8_jupyter"
+     ]
     }
    },
    "cell_type": "code",
    "source": [
     "val anthropicOptions = AnthropicChatOptions.builder()\n",
-    "    .model(AnthropicApi.ChatModel.CLAUDE_3_5_SONNET)\n",
+    "    .model(AnthropicApi.ChatModel.CLAUDE_SONNET_4_0)\n",
     "    .temperature(0.7)\n",
     "    .maxTokens(1024)\n",
     "    .build()\n",
@@ -203,8 +228,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:20:49.519186Z",
-     "start_time": "2025-05-11T18:20:49.489689Z"
+     "end_time": "2025-12-01T13:54:33.117211Z",
+     "start_time": "2025-12-01T13:54:33.081698Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_9_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -229,8 +259,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:20:54.205087Z",
-     "start_time": "2025-05-11T18:20:51.059281Z"
+     "end_time": "2025-12-01T13:54:37.212823Z",
+     "start_time": "2025-12-01T13:54:33.117776Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_10_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -242,15 +277,13 @@
     {
      "data": {
       "text/plain": [
-       "Here's a Kotlin joke:\n",
+       "Here's a Kotlin joke for you:\n",
        "\n",
-       "Why do Kotlin developers never get lost?\n",
+       "Why did the Java developer switch to Kotlin?\n",
        "\n",
-       "Because they always have a Nullable compass! (?.compass)\n",
+       "Because they were tired of writing `NullPointerException` love letters to their code! 💕\n",
        "\n",
-       "*ba dum tss* 😄\n",
-       "\n",
-       "It's a play on Kotlin's safe call operator (?.) which helps prevent null pointer exceptions. Not the most hilarious joke, but it's type-safe! 😉"
+       "(In Kotlin, null safety is built into the type system, so you're much less likely to encounter those pesky NPEs that Java developers know all too well!)"
       ]
      },
      "execution_count": 7,
@@ -276,8 +309,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:20:58.913641Z",
-     "start_time": "2025-05-11T18:20:55.958951Z"
+     "end_time": "2025-12-01T13:54:41.063011Z",
+     "start_time": "2025-12-01T13:54:37.227811Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_11_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -289,15 +327,11 @@
     {
      "data": {
       "text/plain": [
-       "Here's a Kotlin joke:\n",
+       "Why did the Java developer switch to Kotlin?\n",
        "\n",
-       "Why do Kotlin developers never get lost?\n",
+       "Because they were tired of writing `public static void main(String[] args)` when they could just write `fun main()` and actually have fun! \n",
        "\n",
-       "Because they always have a Nullable compass! (They can check if it's null before following its direction) 😄\n",
-       "\n",
-       "*ba dum tss* \n",
-       "\n",
-       "I know, it's a bit corny, but hey, it's safe to use! 😉"
+       "🎯 *Bonus punchline: They also got tired of null pointer exceptions ruining their day!*"
       ]
      },
      "execution_count": 8,
