--- a/notebooks/spring-ai/tutorials/3. Streaming.ipynb
+++ b/notebooks/spring-ai/tutorials/3. Streaming.ipynb
@@ -23,8 +23,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:23:53.996189Z",
-     "start_time": "2025-05-11T18:23:51.890277Z"
+     "end_time": "2025-12-01T14:25:27.762051Z",
+     "start_time": "2025-12-01T14:25:26.846515Z"
     }
    },
    "cell_type": "code",
@@ -32,7 +32,7 @@
     "%useLatestDescriptors\n",
     "%use coroutines\n",
     "%use spring-ai-openai\n",
-    "USE { dependencies { implementation(\"org.jetbrains.kotlinx:kotlinx-coroutines-reactive:1.10.1\") } }"
+    "USE { dependencies { implementation(\"org.jetbrains.kotlinx:kotlinx-coroutines-reactive:1.10.2\") } }"
    ],
    "outputs": [],
    "execution_count": 1
@@ -72,8 +72,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:23:54.052104Z",
-     "start_time": "2025-05-11T18:23:54.000397Z"
+     "end_time": "2025-12-01T14:25:27.829189Z",
+     "start_time": "2025-12-01T14:25:27.762778Z"
     }
    },
    "cell_type": "code",
@@ -89,8 +89,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:24:00.818242Z",
-     "start_time": "2025-05-11T18:24:00.565416Z"
+     "end_time": "2025-12-01T14:25:28.192138Z",
+     "start_time": "2025-12-01T14:25:27.831352Z"
     }
    },
    "cell_type": "code",
@@ -117,8 +117,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:24:13.965769Z",
-     "start_time": "2025-05-11T18:24:04.804151Z"
+     "end_time": "2025-12-01T14:25:34.743914Z",
+     "start_time": "2025-12-01T14:25:28.193746Z"
     }
    },
    "cell_type": "code",
@@ -136,11 +136,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Once upon a time in a lush, green meadow, there lived a brave little rabbit named Benny who dreamed of exploring the world beyond the tall, golden grass. One sunny morning, Benny discovered a sparkling, hidden path lined with colorful wildflowers that led deep into the Enchanted Forest. As he hopped along the path, he met a wise old tortoise named Tilly, who warned him of a mischievous fox lurking nearby, always on the lookout for a tasty rabbit snack. Undeterred, Benny continued on his adventure, determined to find the legendary Rainbow Carrot said to grant any wish to the one who found it. \n",
+      "Once upon a time in a lush, green forest, there lived a clever rabbit named Benny who dreamed of becoming the fastest runner in all the land. Benny challenged the boastful tortoise, Timmy, to a race, confident that his speed would secure him victory. As the race began, Benny sprinted ahead, leaving Timmy far behind, and decided to take a nap under a shady tree. Meanwhile, Timmy kept plodding along, steady and determined, never once stopping to rest. \n",
       "\n",
-      "Along the way, Benny befriended a group of playful squirrels who shared their acorn stash and joined him on his quest, forming a bond of friendship that made them stronger together. They danced and sang as they ventured deeper into the forest, unaware of the sly fox watching them from behind a tree. Suddenly, the fox sprang out, but quick-thinking Benny devised a clever plan, leading the fox on a wild chase through the twisting trees and over bubbling brooks. With the help of his new friends, Benny created a diversion that allowed them to escape safely, leaving the frustrated fox behind. \n",
+      "When Benny awoke, he panicked and dashed towards the finish line, but it was too late; Timmy had crossed it triumphantly, proving that perseverance beats arrogance. The animals of the forest celebrated Timmy's victory with a grand feast, inviting Benny to join and learn from his mistake. Realizing the importance of humility, Benny promised to train harder and respect his fellow creatures' strengths. From that day on, he and Timmy became the best of friends, often racing together but always encouraging one another. \n",
       "\n",
-      "Finally, after a long day of adventures, Benny and his friends reached the glimmering pond where the fabled Rainbow Carrot was said to grow. As the sun set, casting a golden glow over the water, Benny spotted the vibrant carrot emerging from the earth, and with a heart full of hope, he made his wish for peace and happiness for all the creatures of the meadow. From that day on, the meadow flourished, and Benny, the brave little rabbit, became a beloved hero, reminding everyone that true courage comes from friendship and kindness."
+      "As the seasons changed, Benny shared his newfound wisdom with other rabbits, teaching them that true greatness lies not just in speed, but in heart and friendship. And so, in that enchanted forest, the rabbits thrived, united by the lessons of a tortoise who taught them that slow and steady truly wins the race."
      ]
     }
    ],
@@ -160,8 +160,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:24:20.616521Z",
-     "start_time": "2025-05-11T18:24:13.970221Z"
+     "end_time": "2025-12-01T14:25:42.305431Z",
+     "start_time": "2025-12-01T14:25:34.746001Z"
     }
    },
    "cell_type": "code",
@@ -183,13 +183,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Once upon a time in a lush, green meadow, there lived a clever rabbit named Ruby, who had the softest fur and the brightest eyes. Every morning, she would hop through the dew-kissed grass, gathering golden dandelions to share with her friends. One day, while exploring a hidden glade, Ruby stumbled upon a shimmering pond that sparkled like diamonds under the sun. \n",
+      "Once upon a time in a lush, green meadow, there lived a clever rabbit named Ruby who dreamed of discovering the hidden treasures of the Enchanted Forest. One sunny morning, Ruby decided to gather her friends — Benny the brave bunny, and Lily the wise old tortoise — to embark on an adventure. As they hopped along the winding path, they stumbled upon a sparkling stream filled with shimmering fish that danced like stars in the water. \n",
       "\n",
-      "Curious and enchanted, she approached the water and discovered a wise old turtle named Timothy, who told her tales of a magical forest where dreams came true. Eager to find this wondrous place, Ruby gathered her friends—a brave rabbit named Benny and a gentle rabbit called Lily—and together they set off on an adventure. \n",
+      "Suddenly, a mischievous fox appeared, claiming to know the secret to finding the treasure, but only if Ruby could solve his riddle. With her quick wit, Ruby answered the riddle, impressing the fox, who reluctantly decided to guide them deeper into the forest. The trio encountered magical creatures along the way, including a singing bird with feathers of gold and a gentle deer who offered them guidance. \n",
       "\n",
-      "As they traveled, they encountered a mischievous fox who tried to trick them, but Ruby outsmarted him with her quick thinking and clever riddles. After a long journey filled with laughter and challenges, they finally reached the enchanted forest, where the trees whispered secrets and flowers sang sweet melodies. \n",
+      "After crossing a bridge made of rainbows, they finally reached a hidden glade where an ancient oak tree stood, its trunk wrapped in vines and glowing with an otherworldly light. Beneath the tree, they discovered a chest filled with sparkling gemstones and enchanted carrots that could grant wishes. Ruby, Benny, and Lily decided to share their newfound treasure with all the animals of the meadow, ensuring that everyone could enjoy the magic. \n",
       "\n",
-      "In the heart of the forest, they found a glowing flower that granted wishes, and each rabbit made a wish from the bottom of their hearts. Ruby wished for happiness for all her friends, Benny wished for courage to protect them, and Lily wished for endless adventures together. With their wishes granted, the three rabbits returned to their meadow, knowing that their friendship was the greatest magic of all. And from that day on, they lived happily ever after, sharing stories of their adventures under the stars."
+      "From that day on, the meadow thrived with happiness and friendship, reminding all who lived there that true treasure lies in the bonds we create and the adventures we share. And so, Ruby and her friends continued to explore, their hearts forever filled with the spirit of adventure and the joy of togetherness."
      ]
     }
    ],
