--- a/notebooks/spring-ai/tutorials/5. Structured Outputs.ipynb
+++ b/notebooks/spring-ai/tutorials/5. Structured Outputs.ipynb
@@ -24,15 +24,22 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:29:15.544329Z",
-     "start_time": "2025-05-11T18:29:14.296612Z"
+     "end_time": "2025-12-01T15:09:09.196982Z",
+     "start_time": "2025-12-01T15:09:08.172094Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_3_jupyter",
+      "Line_4_jupyter",
+      "Line_5_jupyter"
+     ]
     }
    },
    "cell_type": "code",
    "source": [
     "%useLatestDescriptors\n",
     "%use spring-ai-openai\n",
-    "USE { dependencies { implementation(\"com.fasterxml.jackson.module:jackson-module-kotlin:2.18.2\") } }"
+    "USE { dependencies { implementation(\"com.fasterxml.jackson.module:jackson-module-kotlin:2.20.1\") } }"
    ],
    "outputs": [],
    "execution_count": 1
@@ -40,8 +47,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:29:15.841Z",
-     "start_time": "2025-05-11T18:29:15.548584Z"
+     "end_time": "2025-12-01T15:09:09.569425Z",
+     "start_time": "2025-12-01T15:09:09.198832Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_6_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -72,8 +84,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:29:16.842779Z",
-     "start_time": "2025-05-11T18:29:15.844680Z"
+     "end_time": "2025-12-01T15:09:10.914494Z",
+     "start_time": "2025-12-01T15:09:09.570001Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_7_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -118,8 +135,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:29:17.109261Z",
-     "start_time": "2025-05-11T18:29:16.847749Z"
+     "end_time": "2025-12-01T15:09:11.172636Z",
+     "start_time": "2025-12-01T15:09:10.921959Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_8_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -162,17 +184,25 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:29:17.156954Z",
-     "start_time": "2025-05-11T18:29:17.112941Z"
+     "end_time": "2025-12-01T15:09:11.272221Z",
+     "start_time": "2025-12-01T15:09:11.174025Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_9_jupyter"
+     ]
     }
    },
    "cell_type": "code",
    "source": [
-    "data class MobileDevice(\n",
-    "    val name: String,\n",
-    "    val price: Double,\n",
-    "    val category: String,\n",
-    "    val features: List<String> = emptyList()\n",
+    "import com.fasterxml.jackson.annotation.JsonCreator\n",
+    "import com.fasterxml.jackson.annotation.JsonProperty\n",
+    "\n",
+    "data class MobileDevice @JsonCreator constructor(\n",
+    "    @JsonProperty(\"name\") val name: String,\n",
+    "    @JsonProperty(\"price\") val price: Double,\n",
+    "    @JsonProperty(\"category\") val category: String,\n",
+    "    @JsonProperty(\"features\") val features: List<String> = emptyList()\n",
     ")"
    ],
    "outputs": [],
@@ -186,8 +216,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:29:19.217213Z",
-     "start_time": "2025-05-11T18:29:17.169662Z"
+     "end_time": "2025-12-01T15:09:14.193709Z",
+     "start_time": "2025-12-01T15:09:11.272839Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_10_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -203,7 +238,7 @@
     {
      "data": {
       "text/plain": [
-       "MobileDevice(name=XYZ Pro Max 12, price=1099.99, category=smartphone, features=[5G connectivity, 108 MP camera, 120Hz refresh rate display, Fast charging, Water and dust resistance])"
+       "MobileDevice(name=SuperPhone XZ, price=999.99, category=smartphone, features=[6.7-inch AMOLED display, 128GB internal storage, 12GB RAM, Triple rear camera setup, 5G connectivity, 4000mAh battery, Wireless charging, IP68 water and dust resistance])"
       ]
      },
      "execution_count": 6,
@@ -212,6 +247,18 @@
     }
    ],
    "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-01T15:09:14.198727Z",
+     "start_time": "2025-12-01T15:09:14.194477Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "outputs": [],
+   "execution_count": 7
   }
  ],
  "metadata": {
