--- a/notebooks/spring-ai/tutorials/6. Advisors.ipynb
+++ b/notebooks/spring-ai/tutorials/6. Advisors.ipynb
@@ -21,9 +21,14 @@
   },
   {
    "metadata": {
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_3_jupyter"
+     ]
+    },
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:36:14.795200Z",
-     "start_time": "2025-05-11T18:36:13.823923Z"
+     "end_time": "2025-12-01T15:11:12.221472Z",
+     "start_time": "2025-12-01T15:11:11.130541Z"
     }
    },
    "cell_type": "code",
@@ -37,8 +42,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:36:15.083140Z",
-     "start_time": "2025-05-11T18:36:14.798769Z"
+     "end_time": "2025-12-01T15:11:12.584541Z",
+     "start_time": "2025-12-01T15:11:12.222821Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_4_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -74,8 +84,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:36:15.173726Z",
-     "start_time": "2025-05-11T18:36:15.087172Z"
+     "end_time": "2025-12-01T15:14:21.414663Z",
+     "start_time": "2025-12-01T15:14:21.357593Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_6_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -84,11 +99,11 @@
     "\n",
     "val chatClient = ChatClient\n",
     "    .builder(chatModel)\n",
-    "    .defaultAdvisors(MessageChatMemoryAdvisor(chatMemory))\n",
+    "    .defaultAdvisors(MessageChatMemoryAdvisor.builder(chatMemory).build())\n",
     "    .build()\n"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -98,8 +113,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:36:16.342903Z",
-     "start_time": "2025-05-11T18:36:15.177608Z"
+     "end_time": "2025-12-01T15:14:23.656335Z",
+     "start_time": "2025-12-01T15:14:22.578172Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_7_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -108,23 +128,28 @@
     {
      "data": {
       "text/plain": [
-       "Sure! Why did the scarecrow win an award? \n",
+       "Why did the scarecrow win an award? \n",
        "\n",
        "Because he was outstanding in his field!"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:36:17.286268Z",
-     "start_time": "2025-05-11T18:36:16.347106Z"
+     "end_time": "2025-12-01T15:14:25.286378Z",
+     "start_time": "2025-12-01T15:14:23.656836Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_8_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -136,12 +161,12 @@
        "The previous message in our chat history was a joke: \"Why did the scarecrow win an award? Because he was outstanding in his field!\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -168,35 +193,37 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:36:17.442802Z",
-     "start_time": "2025-05-11T18:36:17.291557Z"
+     "end_time": "2025-12-01T15:17:46.724533Z",
+     "start_time": "2025-12-01T15:17:46.639673Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_10_jupyter"
+     ]
     }
    },
    "cell_type": "code",
    "source": [
-    "import org.springframework.ai.chat.client.advisor.api.AdvisedRequest\n",
-    "import org.springframework.ai.chat.client.advisor.api.AdvisedResponse\n",
-    "import org.springframework.ai.chat.client.advisor.api.CallAroundAdvisor\n",
-    "import org.springframework.ai.chat.client.advisor.api.CallAroundAdvisorChain\n",
+    "import org.springframework.ai.chat.client.advisor.api.CallAdvisor\n",
+    "import org.springframework.ai.chat.client.advisor.api.CallAdvisorChain\n",
     "\n",
-    "\n",
-    "class CustomLogger: CallAroundAdvisor {\n",
+    "class CustomLogger: CallAdvisor {\n",
     "    override fun getName(): String {\n",
     "        return \"CustomLogger\"\n",
     "    }\n",
     "\n",
     "    override fun getOrder(): Int = 0\n",
     "\n",
-    "    override fun aroundCall(advisedRequest: AdvisedRequest, chain: CallAroundAdvisorChain): AdvisedResponse {\n",
-    "        println(\"CustomLogger.Before: ${advisedRequest}\")\n",
-    "        val advisedResponse = chain.nextAroundCall(advisedRequest)\n",
-    "        println(\"CustomLogger.After: ${advisedResponse}\")\n",
-    "        return advisedResponse\n",
+    "    override fun adviseCall(chatClientRequest: ChatClientRequest, callAdvisorChain: CallAdvisorChain): ChatClientResponse {\n",
+    "        println(\"CustomLogger.Before: ${chatClientRequest}\")\n",
+    "        val chatClientResponse = callAdvisorChain.nextCall(chatClientRequest)\n",
+    "        println(\"CustomLogger.After: ${chatClientResponse}\")\n",
+    "        return chatClientResponse\n",
     "    }\n",
     "}"
    ],
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -206,8 +233,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:36:19.319693Z",
-     "start_time": "2025-05-11T18:36:17.448459Z"
+     "end_time": "2025-12-01T15:17:51.740272Z",
+     "start_time": "2025-12-01T15:17:48.695125Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_11_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -223,10 +255,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CustomLogger.Before: AdvisedRequest[chatModel=OpenAiChatModel [defaultOptions=OpenAiChatOptions: {\"streamUsage\":false,\"model\":\"gpt-4o-mini\",\"temperature\":0.7}], userText=Generate HelloWorld in Kotlin, systemText=null, chatOptions=OpenAiChatOptions: {\"streamUsage\":false,\"model\":\"gpt-4o-mini\",\"temperature\":0.7}, media=[], toolNames=[], toolCallbacks=[], messages=[UserMessage{content='Hi, tell me a joke', properties={messageType=USER}, messageType=USER}, AssistantMessage [messageType=ASSISTANT, toolCalls=[], textContent=Sure! Why did the scarecrow win an award? \n",
+      "CustomLogger.Before: ChatClientRequest[prompt=Prompt{messages=[UserMessage{content='Hi, tell me a joke', metadata={messageType=USER}, messageType=USER}, AssistantMessage [messageType=ASSISTANT, toolCalls=[], textContent=Why did the scarecrow win an award? \n",
       "\n",
-      "Because he was outstanding in his field!, metadata={finishReason=STOP, refusal=, index=0, role=ASSISTANT, id=chatcmpl-BW5p1J0I5H63bmJysjT4KnsGhVSTJ, messageType=ASSISTANT}], UserMessage{content='What is previous message in our chat history?', properties={messageType=USER}, messageType=USER}, AssistantMessage [messageType=ASSISTANT, toolCalls=[], textContent=The previous message in our chat history was a joke: \"Why did the scarecrow win an award? Because he was outstanding in his field!\", metadata={finishReason=STOP, refusal=, index=0, role=ASSISTANT, id=chatcmpl-BW5p2XtUfyKu7J2lDAj51WV7sKd1n, messageType=ASSISTANT}]], userParams={}, systemParams={}, advisors=[org.springframework.ai.chat.client.advisor.MessageChatMemoryAdvisor@6f20c8da, Line_7_jupyter$CustomLogger@53b8129e, org.springframework.ai.chat.client.advisor.ChatModelCallAdvisor@33668eae, org.springframework.ai.chat.client.advisor.ChatModelStreamAdvisor@5830fd62], advisorParams={}, adviseContext={spring.ai.chat.client.advisors=[org.springframework.ai.chat.client.advisor.MessageChatMemoryAdvisor@6f20c8da, Line_7_jupyter$CustomLogger@53b8129e, org.springframework.ai.chat.client.advisor.ChatModelCallAdvisor@33668eae, org.springframework.ai.chat.client.advisor.ChatModelStreamAdvisor@5830fd62], spring.ai.chat.client.model=OpenAiChatModel [defaultOptions=OpenAiChatOptions: {\"streamUsage\":false,\"model\":\"gpt-4o-mini\",\"temperature\":0.7}], spring.ai.chat.client.user.params={}, spring.ai.chat.client.system.params={}}, toolContext={}]\n",
-      "CustomLogger.After: AdvisedResponse[response=ChatResponse [metadata={ id: chatcmpl-BW5p3rRgS1T9vr91wDI0XoxscPSez, usage: DefaultUsage{promptTokens=92, completionTokens=78, totalTokens=170}, rateLimit: { @type: org.springframework.ai.openai.metadata.OpenAiRateLimit, requestsLimit: 30000, requestsRemaining: 29999, requestsReset: PT0.002S, tokensLimit: 150000000; tokensRemaining: 149999916; tokensReset: PT0S } }, generations=[Generation[assistantMessage=AssistantMessage [messageType=ASSISTANT, toolCalls=[], textContent=Certainly! Here’s a simple \"Hello, World!\" program written in Kotlin:\n",
+      "Because he was outstanding in his field!, metadata={role=ASSISTANT, messageType=ASSISTANT, finishReason=STOP, refusal=, annotations=[], index=0, id=chatcmpl-ChztWkrp1ETiltxmxtfPP4OvB1ZMf}], UserMessage{content='What is previous message in our chat history?', metadata={messageType=USER}, messageType=USER}, AssistantMessage [messageType=ASSISTANT, toolCalls=[], textContent=The previous message in our chat history was a joke: \"Why did the scarecrow win an award? Because he was outstanding in his field!\", metadata={role=ASSISTANT, messageType=ASSISTANT, finishReason=STOP, refusal=, annotations=[], index=0, id=chatcmpl-ChztXs2RCzayFqZlJQkNppJrLkOOE}], UserMessage{content='Generate HelloWorld in Kotlin', metadata={messageType=USER}, messageType=USER}], modelOptions=OpenAiChatOptions: {\"streamUsage\":false,\"model\":\"gpt-4o-mini\",\"temperature\":0.7}}, context={}]\n",
+      "CustomLogger.After: ChatClientResponse[chatResponse=ChatResponse [metadata={ id: chatcmpl-ChzwrBqARkcbawIpn0trhBxOxmmaR, usage: DefaultUsage{promptTokens=90, completionTokens=77, totalTokens=167}, rateLimit: { @type: org.springframework.ai.openai.metadata.OpenAiRateLimit, requestsLimit: 30000, requestsRemaining: 29999, requestsReset: PT0.002S, tokensLimit: 150000000; tokensRemaining: 149999917; tokensReset: PT0S } }, generations=[Generation[assistantMessage=AssistantMessage [messageType=ASSISTANT, toolCalls=[], textContent=Here’s a simple \"Hello, World!\" program in Kotlin:\n",
       "\n",
       "```kotlin\n",
       "fun main() {\n",
@@ -234,13 +266,13 @@
       "}\n",
       "```\n",
       "\n",
-      "To run this code, you can use an IDE like IntelliJ IDEA or an online Kotlin compiler. Just copy and paste this code into the editor, and it will print \"Hello, World!\" to the console., metadata={finishReason=STOP, refusal=, index=0, role=ASSISTANT, id=chatcmpl-BW5p3rRgS1T9vr91wDI0XoxscPSez, messageType=ASSISTANT}], chatGenerationMetadata=DefaultChatGenerationMetadata[finishReason='STOP', filters=0, metadata=0]]]], adviseContext={spring.ai.chat.client.model=OpenAiChatModel [defaultOptions=OpenAiChatOptions: {\"streamUsage\":false,\"model\":\"gpt-4o-mini\",\"temperature\":0.7}], spring.ai.chat.client.advisors=[org.springframework.ai.chat.client.advisor.MessageChatMemoryAdvisor@6f20c8da, Line_7_jupyter$CustomLogger@53b8129e, org.springframework.ai.chat.client.advisor.ChatModelCallAdvisor@33668eae, org.springframework.ai.chat.client.advisor.ChatModelStreamAdvisor@5830fd62], spring.ai.chat.client.user.params={}, spring.ai.chat.client.system.params={}}]\n"
+      "You can run this code in any Kotlin environment, such as an IDE like IntelliJ IDEA or an online Kotlin compiler. Just copy and paste the code, and it will print \"Hello, World!\" to the console when executed., metadata={role=ASSISTANT, messageType=ASSISTANT, finishReason=STOP, refusal=, annotations=[], index=0, id=chatcmpl-ChzwrBqARkcbawIpn0trhBxOxmmaR}], chatGenerationMetadata=DefaultChatGenerationMetadata[finishReason='STOP', filters=0, metadata=0]]]], context={}]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Certainly! Here’s a simple \"Hello, World!\" program written in Kotlin:\n",
+       "Here’s a simple \"Hello, World!\" program in Kotlin:\n",
        "\n",
        "```kotlin\n",
        "fun main() {\n",
@@ -248,15 +280,15 @@
        "}\n",
        "```\n",
        "\n",
-       "To run this code, you can use an IDE like IntelliJ IDEA or an online Kotlin compiler. Just copy and paste this code into the editor, and it will print \"Hello, World!\" to the console."
+       "You can run this code in any Kotlin environment, such as an IDE like IntelliJ IDEA or an online Kotlin compiler. Just copy and paste the code, and it will print \"Hello, World!\" to the console when executed."
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 9
   }
  ],
  "metadata": {
