--- a/notebooks/spring-ai/tutorials/7. RAG.ipynb
+++ b/notebooks/spring-ai/tutorials/7. RAG.ipynb
@@ -25,15 +25,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:41:13.950443Z",
-     "start_time": "2025-05-11T18:41:12.693148Z"
+     "end_time": "2025-12-01T15:19:14.569056Z",
+     "start_time": "2025-12-01T15:19:12.369170Z"
     }
    },
    "cell_type": "code",
    "source": [
     "%useLatestDescriptors\n",
     "%use spring-ai-openai\n",
-    "USE { dependencies { implementation(\"org.springframework.ai:spring-ai-advisors-vector-store:1.0.0-M8\") } }"
+    "USE { dependencies { implementation(\"org.springframework.ai:spring-ai-advisors-vector-store:1.1.0\") } }"
    ],
    "outputs": [],
    "execution_count": 1
@@ -41,8 +41,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:41:14.206746Z",
-     "start_time": "2025-05-11T18:41:13.962082Z"
+     "end_time": "2025-12-01T15:19:16.148725Z",
+     "start_time": "2025-12-01T15:19:15.830712Z"
     }
    },
    "cell_type": "code",
@@ -70,8 +70,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:41:15.511846Z",
-     "start_time": "2025-05-11T18:41:15.479384Z"
+     "end_time": "2025-12-01T15:19:17.435597Z",
+     "start_time": "2025-12-01T15:19:17.387313Z"
     }
    },
    "cell_type": "code",
@@ -92,8 +92,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:41:18.042772Z",
-     "start_time": "2025-05-11T18:41:17.952079Z"
+     "end_time": "2025-12-01T15:19:18.698189Z",
+     "start_time": "2025-12-01T15:19:18.599906Z"
     }
    },
    "cell_type": "code",
@@ -117,8 +117,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:41:22.574539Z",
-     "start_time": "2025-05-11T18:41:20.814250Z"
+     "end_time": "2025-12-01T15:19:21.012921Z",
+     "start_time": "2025-12-01T15:19:19.814717Z"
     }
    },
    "cell_type": "code",
@@ -150,8 +150,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:41:32.560363Z",
-     "start_time": "2025-05-11T18:41:30.160435Z"
+     "end_time": "2025-12-01T15:21:14.964547Z",
+     "start_time": "2025-12-01T15:21:12.521315Z"
     }
    },
    "cell_type": "code",
@@ -165,7 +165,7 @@
     "        .build()\n",
     ")\n",
     "    .prompt()\n",
-    "    .advisors(QuestionAnswerAdvisor(vectoreStore))\n",
+    "    .advisors(QuestionAnswerAdvisor.builder(vectoreStore).build())\n",
     "    .user(\"current version of Kotlin?\")\n",
     "    .call()\n",
     "    .content()"
@@ -174,7 +174,7 @@
     {
      "data": {
       "text/plain": [
-       "The current version of Kotlin is 2.1.20, which was published on March 20, 2025. For more information, you can visit the [Kotlin GitHub page](https://github.com/jetbrains/kotlin)."
+       "The current version of Kotlin is 2.1.20, which was published on March 20, 2025. You can find more information about it on [GitHub](https://github.com/jetbrains/kotlin)."
       ]
      },
      "execution_count": 7,
